Working express server with websockets

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
     "allowJs": true,
     "watch": true,
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
   }
 }
