exclude folders to avoid infinite complie loop

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,9 @@
     "watch": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-  }
+  },
+  "exclude": [
+    "public",
+    "dist"
+  ]
 }
