--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "poshett-web",
-  "version": "1.0.0",
+  "name": "Poshett-web",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "tsc -p tsconfig.json -w",
+    "build": "tsc -p tsconfig.json",
+    "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.16.1",
-    "@types/ws": "^6.0.1",
-    "express": "^4.16.4",
-    "ws": "^6.1.3"
+    "express": "4.16.4",
+    "ws": "6.1.3"
+  },
+  "devDependencies": {
+    "@types/express": "4.16.1",
+    "@types/ws": "6.0.1",
+    "typescript": "3.2.4",
+    "@types/node": "10.12.18"
   }
 }
