--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run dev-ts",
-    "dev-ts": "tsc -p tsconfig.json -w",
-    "dev-sass": "node-sass ./style ./dist/public/css/compiled.css",
+    "dev": "npm run watch-ts & npm run watch-sass",
+    "watch-ts": "tsc -p tsconfig.json -w",
+    "watch-sass": "node-sass -w ./style/style.sass ./dist/public/css/compiled.css",
     "build": "npm run build-ts",
     "build-ts": "tsc -p tsconfig.json",
-    "build-sass": "node-sass ./style ./dist/public/css/compiled.css",
+    "build-sass": "node-sass ./style/style.sass ./dist/public/css/compiled.css",
     "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
