--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Poshett-web",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "npm run watch-ts & npm run watch-sass",
     "watch-ts": "tsc -p tsconfig.json -w",
@@ -23,7 +23,7 @@
     "@types/express": "4.16.1",
     "@types/node": "10.12.18",
     "@types/ws": "6.0.1",
-    "node-sass": "^4.11.0",
+    "node-sass": "4.11.0",
     "typescript": "3.2.4"
   }
 }
