--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "Poshett-web",
+  "name": "@fnu/poshett-web",
   "version": "0.1.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "dev": "npm run watch-ts & npm run watch-sass",
     "watch-ts": "tsc -p tsconfig.json -w",
-    "watch-sass": "node-sass -w ./style/style.sass ./dist/public/css/compiled.css",
-    "build": "npm run build-ts",
+    "watch-sass": "node-sass -w ./src/style/style.sass ./dist/public/css/compiled.css",
+    "build": "npm run build-ts & npm run build-sass & npm run build-static",
     "build-ts": "tsc -p tsconfig.json",
-    "build-sass": "node-sass ./style/style.sass ./dist/public/css/compiled.css",
+    "build-sass": "node-sass ./src/style/style.sass ./dist/public/css/compiled.css",
+    "build-static": "copyfiles -f src/public/index.html dist/public/",
     "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,6 +24,7 @@
     "@types/express": "4.16.1",
     "@types/node": "10.12.18",
     "@types/ws": "6.0.1",
+    "copyfiles": "2.1.0",
     "node-sass": "4.11.0",
     "typescript": "3.2.4"
   }
