--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "npm run build-ts & npm run build-sass & npm run build-static",
     "build-ts": "tsc -p tsconfig.json",
     "build-sass": "node-sass ./src/style/style.sass ./dist/public/css/compiled.css",
-    "build-static": "copyfiles -f src/public/index.html dist/public/",
+    "build-static": "copyfiles -f src/public/index.html dist/public/ & copyfiles -f src/public/js/index.js dist/public/js",
     "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
