--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "npm run watch-ts & npm run watch-sass",
-    "watch-ts": "tsc -p tsconfig.json -w",
-    "watch-sass": "node-sass -w ./src/style/style.sass ./dist/public/css/compiled.css",
-    "build": "npm run build-ts & npm run build-sass & npm run build-static",
-    "build-ts": "tsc -p tsconfig.json",
-    "build-sass": "node-sass ./src/style/style.sass ./dist/public/css/compiled.css",
-    "build-static": "copyfiles -f src/public/index.html dist/public/ & copyfiles -f src/public/js/index.js dist/public/js",
+    "build-web": "webpack --config webpack.config.web.js",
+    "build-server": "webpack --config webpack.config.server.js",
+    "build-server-dts": "tsc -p ./tsconfig.server-dts.json",
+    "dev-web": "webpack --config webpack.config.web.js  --watch",
+    "dev-server": "webpack --config webpack.config.server.js  --watch",
     "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,16 +26,27 @@
     "url": "https://github.com/Pecamo/Poshett-web.git"
   },
   "dependencies": {
+    "@types/express": "4.16.1",
     "@types/node": "10.12.18",
     "@types/ws": "6.0.1",
-    "@types/express": "4.16.1",
     "express": "4.16.4",
+    "html-webpack-plugin": "^3.2.0",
     "ws": "6.1.3"
   },
   "devDependencies": {
     "copyfiles": "2.1.0",
-    "node-sass": "4.11.0",
-    "typescript": "3.2.4"
+    "css-loader": "^2.1.0",
+    "dts-bundle-generator": "^2.1.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "ts-loader": "^5.3.3",
+    "tslint": "^5.12.1",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-eslint-rules": "^5.4.0",
+    "typescript": "3.2.4",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3"
   },
   "typings": "dist/index.d.ts"
 }
