--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "album",
     "cover"
   ],
-  "main": "dist/index.js",
+  "main": "dist/server/index.js",
+  "typings": "dist/server/index.d.ts",
   "scripts": {
     "dev": "npm run watch-ts & npm run watch-sass",
+    "build": "npm run build-web & npm run build-server",
     "build-web": "webpack --config webpack.config.web.js",
     "build-server": "webpack --config webpack.config.server.js",
-    "build-server-dts": "tsc -p ./tsconfig.server-dts.json",
     "dev-web": "webpack --config webpack.config.web.js  --watch",
     "dev-server": "webpack --config webpack.config.server.js  --watch",
     "start": "node ./dist/index.js",
@@ -29,6 +30,7 @@
     "@types/express": "4.16.1",
     "@types/node": "10.12.18",
     "@types/ws": "6.0.1",
+    "declaration-bundler-webpack-plugin": "^1.0.3",
     "express": "4.16.4",
     "html-webpack-plugin": "^3.2.0",
     "ws": "6.1.3"
@@ -36,7 +38,6 @@
   "devDependencies": {
     "copyfiles": "2.1.0",
     "css-loader": "^2.1.0",
-    "dts-bundle-generator": "^2.1.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -47,6 +48,5 @@
     "typescript": "3.2.4",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3"
-  },
-  "typings": "dist/index.d.ts"
+  }
 }
