--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/ws": "6.0.1",
     "express": "4.16.4",
     "html-webpack-plugin": "^3.2.0",
+    "vue": "^2.6.7",
+    "vue-router": "^3.0.2",
     "ws": "6.1.3"
   },
   "devDependencies": {
@@ -46,6 +48,8 @@
     "tslint-config-airbnb": "^5.11.1",
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "3.2.4",
+    "vue-loader": "^15.6.4",
+    "vue-template-compiler": "^2.6.7",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3"
   }
