--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ws": "6.1.3"
   },
   "devDependencies": {
+    "@types/vue": "^2.0.0",
     "copyfiles": "2.1.0",
     "css-loader": "^2.1.0",
     "mini-css-extract-plugin": "^0.5.0",
