--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "dev:web": "cross-env NODE_ENV=development webpack --config webpack.config.web.js --mode=development --watch",
     "dev:server": "cross-env NODE_ENV=development webpack --config webpack.config.server.js --mode=development --watch",
     "build": "run-s fix-all build:**",
-    "build:web": "cross-env NODE_ENV=production webpack --config webpack.config.web.js --mode=production",
-    "build:server": "cross-env NODE_ENV=production webpack --config webpack.config.server.js --mode=production",
+    "build:web": "cross-env NODE_ENV=production webpack --config webpack.config.web.js -p",
+    "build:server": "cross-env NODE_ENV=production webpack --config webpack.config.server.js -p",
     "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "fix-all": "tslint --project tsconfig.web.json --fix src/web/**/*.ts && tslint --project tsconfig.server.json --fix src/server/**/*.ts"
@@ -39,7 +39,6 @@
   },
   "devDependencies": {
     "@types/vue": "^2.0.0",
-    "copyfiles": "2.1.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
     "mini-css-extract-plugin": "^0.5.0",
