--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@types/ws": "6.0.1",
     "express": "4.16.4",
     "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.11",
     "vue": "^2.6.7",
+    "vue-fragment": "^1.5.0",
     "vue-router": "^3.0.2",
     "ws": "6.1.3"
   },
