--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fnu/poshett-web",
   "version": "1.0.0",
-  "description": "poshett-web is the common HTML server and visual interface part of the Poshett project.",
+  "description": "poshett-web is the common HTTP server and visual interface part of the Poshett project.",
   "keywords": [
     "poshett",
     "music",
